--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,9 @@
 {
     "compilerOptions": {
-        "target": "ES5",
-        "sourceMap": true,
         "outDir": "dist",
-    }
+        "sourceMap": true
+    },
+    "include": [
+        "src/**/*"
+    ],
 }
